--- a/package.json
+++ b/package.json
@@ -1,43 +1,56 @@
 {
   "name": "cp-vs-helper",
-  "displayName": "cp=vs-helper",
-  "description": "helps in running and submitting solutions to codeforces problems directky from vs code",
+  "displayName": "CP VS Helper",
+  "description": "A VS Code extension to help with competitive programming",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.98.0"
+    "vscode": "^1.50.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./extension.js",
+  "activationEvents": [
+    "onCommand:extension.runProblem",
+    "onCommand:extension.submitToCodeforces"
+  ],
+  "main": "./src/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "cp-vs-helper.helloWorld",
-        "title": "Hello World"
+        "command": "extension.runProblem",
+        "title": "Run Problem"
+      },
+      {
+        "command": "extension.submitToCodeforces",
+        "title": "Submit to Codeforces"
       }
     ]
   },
   "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "vscode-test"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -w -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
-    "@types/vscode": "^1.98.0",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1",
-    "eslint": "^9.21.0"
+    "eslint": "^7.10.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "typescript": "^4.0.3",
+    "vscode": "^1.1.34"
   },
   "dependencies": {
     "axios": "^1.8.2",
-    "cheerio": "^1.0.0",
-    "child_process": "^1.0.2",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
-    "puppeteer": "^24.4.0"
-  }
+    "minimatch": "^10.0.1",
+    "minimist": "^1.2.8",
+    "mkdirp": "^3.0.1",
+    "mocha": "^11.1.0",
+    "node-fetch": "^2.7.0",
+    "playwright": "^1.51.0",
+    "puppeteer": "^24.4.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "regex": "^6.0.1",
+    "ws": "^8.5.0"
+  },
+  "type": "commonjs"
 }
