--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "activationEvents": [
     "onCommand:extension.runProblem",
-    "onCommand:extension.submitToCodeforces"
+    "onCommand:extension.compileAndRunTestCases"
   ],
   "main": "./src/extension.js",
   "contributes": {
@@ -21,8 +21,8 @@
         "title": "Run Problem"
       },
       {
-        "command": "extension.submitToCodeforces",
-        "title": "Submit to Codeforces"
+        "command": "extension.compileAndRunTestCases",
+        "title": "Compile and Run"
       }
     ]
   },
