--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "scripts": {
     "vscode:prepublish": "",
+    "build": "npm install",
+    "start": "node src/server.js",
     "compile": ""
   },
   "repository": {
