--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "minimatch": "^10.0.1",
     "minimist": "^1.2.8",
