--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "cp-vs-helper",
   "displayName": "CP VS Helper",
   "description": "A VS Code extension to help with competitive programming",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "SahilMadaan",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.50.0"
   },
