--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
   "name": "cp-vs-helper",
   "displayName": "CP VS Helper",
   "description": "A VS Code extension to help with competitive programming",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "SahilMadaan",
   "icon": "icon.png",
+  "assets": {
+    "screenshots": [
+      {"path": "images/runProblem.png"},
+      {"path": "images/selectLocation.png"},
+      {"path": "images/openSolution.png"},
+      {"path": "images/compileAndRun.png"},
+      {"path": "images/compilation.png"},
+      {"path": "images/addCustomeTestCase.png"},
+      {"path": "images/takeCustomInput.png"},
+      {"path": "images/testcasesFileCreation.png"},
+    ]
+  },
   "engines": {
     "vscode": "^1.50.0"
   },
@@ -52,17 +64,17 @@
     "axios": "^1.8.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "minimatch": "^10.0.1",
-    "minimist": "^1.2.8",
-    "mkdirp": "^3.0.1",
-    "mocha": "^11.1.0",
     "node-fetch": "^2.7.0",
-    "playwright": "^1.51.0",
-    "puppeteer": "^24.4.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "regex": "^6.0.1",
     "ws": "^8.5.0"
+    // "minimatch": "^10.0.1",
+    // "minimist": "^1.2.8",
+    // "mkdirp": "^3.0.1",
+    // "mocha": "^11.1.0",
+    // "playwright": "^1.51.0",
+    // "puppeteer": "^24.4.0",
+    // "puppeteer-extra": "^3.3.6",
+    // "puppeteer-extra-plugin-stealth": "^2.11.2",
   },
   "type": "commonjs"
 }
